# forest-capital

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_ARCHIVE.md  README.md  analytical_appendix.ipynb  build_notebook.py  create_submission_package.py  render.yaml  vercel.json
backend/: .env.example  alembic.ini  auth.py  config.py  database.py  logger.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scope_guard.py  strategy_metadata.py
backend/agents/: __init__.py  _xai_config.py  academic_advisor.py  academic_review.py  academic_writer.py  base.py  cio.py  contrarian_analyst.py  critic_review.py  equity_analyst.py  evaluator_prompts.py  explainer_agent.py  fixed_income_analyst.py  harness.py  independent_analyst.py  independent_review.py  llm_log.py  models.py  peer_review.py  qa_agent.py  quant_backtester.py  recommendation_prompts.py  research_agent.py  risk_manager.py  usage.py
backend/data/: FNA_670_Project_Sources.xlsx  provenance.json  references.json
backend/migrations/: env.py
backend/models/: schemas.py
backend/scripts/: audit_token_value_nodes.py  backfill_council_resolutions.py  backfill_ig_hy_weights.py  baseline_council_metrics.py  compare_council_metrics.py  heal_draft_88_manifest_hash.py  resolve_completed_triage_items.py  run_play_by_play.py  sanity_check_regime_blends.py  stage_findings_from_api.py
backend/tools/: academic_context.py  academic_deck.py  academic_docx.py  academic_export.py  academic_review_score.py  activity_log.py  agent_context_block.py  analytical_findings.py  analytics.py  analytics_context.py  (+98 more)
(+706 files in other folders)
