[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = ["venv/", "tests/"]

[[tool.mypy.overrides]]
module = [
  "yfinance.*",
  "pandas_datareader.*",
  "hmmlearn.*",
  "cvxpy.*",
  "arch.*",
  "structlog.*",
  "resend.*",
  "slowapi.*",
  "itsdangerous.*",
  "reportlab.*",
  "google.generativeai.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
]
ignore = [
  "E501",  # line too long (handled by black)
  "B008",  # do not perform function calls in default arguments (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "deployment: marks tests that hit live production URLs (run with -m deployment, skipped in normal CI)",
]
